# logcatAI

./: .gitignore  README.md  STRUCTURE.md  package-lock.json  package.json  requirements.txt
docs/: DESIGN.md  OPENCODE_SETUP.md  STRUCTURE.md  UI_DESIGN.md
log/: fff.txt  testfilter.dlf
rust-parser/: .gitignore  BUILD_AND_INSTALL.md  Cargo.toml  INSTALL_WINDOWS.md  README.md
rust-parser/src/: lib.rs
src/: main.py
src/agent/: __init__.py  analyzer.py  opencode_client.py
src/core/: __init__.py  buffer.py  collector.py  detector.py  parser.py  parser_rust.py
src/ui/: analysis_panel.py  log_table.py  main_window.py  opencode_page.py
src/ui/components/: agent_settings_dialog.py  preferences_dialog.py  workspace_dialog.py
src/ui/dashboard/: container.py
src/ui/log_table/: __init__.py  filter_dialog.py  log_model.py  log_table.py  threads.py
src/utils/: opencode_installer.py
