[package]
name = "logcat-parser-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "logcat_parser_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
regex = "1.10"
once_cell = "1.19"

[build-dependencies]
pyo3-build-config = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
